# garmin-copilot-agent

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  azure.yaml  pyproject.toml
.github/: copilot-instructions.md  prepare-for-market-plus.prompt.md
api/: __init__.py  function_app.py  requirements.txt
data/: profile.example.yaml
infra/: budget.bicep  lifecycle-policy.json  main.bicep  main.bicepparam  resources.bicep
mobile/: README.md  analysis_options.yaml  pubspec.yaml
scripts/: _users.py  add_timeline_event.py  audit_nutrition_goals.py  backup_cloud.py  check_costs.py  check_freshness.py  compare_days.py  extract_metrics.py  extract_uploaded_medical.py  fix_timeline.py  import_garmin_csv.py  import_medical.py  list_users.py  migrate_to_multiuser.py  prepare_weekly_review.py  publish_summary.py  push_profile.py  read_goals.py  read_nutrition.py  read_profile.py  read_recommendation_status.py  read_sleep.py  read_training.py  read_user_data.py  release_mobile.ps1  release_mobile.py  seed_data.py  set_goals.py  set_training.py  sync.py
tests/: conftest.py  test_audit_nutrition_goals.py  test_backup_cloud.py  test_compare_days.py  test_data_store.py  test_extract_metrics.py  test_extract_uploaded_medical_cli.py  test_garmin_biometrics.py  test_garmin_client.py  test_list_users_cli.py  test_medical_store.py  test_migrate_multiuser.py  test_models_nutrition.py  test_prepare_weekly_review.py  test_profile.py  test_profile_model.py  test_publish_summary_cli.py  test_push_profile.py  test_read_goals_cli.py  test_read_nutrition_cli.py  test_sync_cli.py  (+7 more)
(+214 files in other folders)
