[project]
name = "garmin-copilot-agent"
version = "0.1.0"
description = "Your Garmin data + GitHub Copilot = personal health adviser"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "garminconnect>=0.2",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
